2005-05-17  Karl Runge <runge@karlrunge.com>
	* x11vnc: more scrolling, -scr_term, -wait_ui, -nowait_bog

2005-05-15  Johannes E. Schindelin  <Johannes.Schindelin@gmx.de>
	* almost every file: ANSIfy, fix warnings from Linus' sparse

2005-05-14  Karl Runge <runge@karlrunge.com>
	* x11vnc: more work on -scrollcopyrect and -xkb modes.

2005-05-13  Johannes E. Schindelin  <Johannes.Schindelin@gmx.de>
	* libvncserver/{main,rfbserver,sockets}.c: fix memory leaks (valgrind)

2005-05-07  Johannes E. Schindelin  <Johannes.Schindelin@gmx.de>
	* libvncserver/rfbserver.c: fix memory leak pointed out by Tim Jansen
	* libvncserver/{httpd,main,rfbserver,sockets}.c, rfb/rfb.h:
	  replace "rfbBool socketInitDone" by "enum rfbSocketState
	  socketState"

2005-05-03  Karl Runge <runge@karlrunge.com>
	* libvncserver/main.c: fix leak in rfbDoCopyRect/rfbScheduleCopyRect
	* configure.ac: guard against empty HAVE_X

2005-05-02  Karl Runge <runge@karlrunge.com>
	* configure.ac: fatal error for x11vnc package if no X present
	* configure.ac: give warnings and info about missing libjpeg/libz
	* x11vnc: X RECORD heuristics to detect scrolls: -scrollcopyrect,
	  build customizations, bandwidth/latency estimates.

2005-04-27  Johannes E. Schindelin  <Johannes.Schindelin@gmx.de>
	* clear requested region (long standing TODO, pointed out by Karl)

2005-04-19  Karl Runge <runge@karlrunge.com>
	* x11vnc: -wireframe, -wirecopyrect.  Back to the 90's with
	  wireframes to avoid window move/resize lurching.
	* safer remote control defaults. -privremote, -safer, -nocmds.
	* debug_xevents, debug_xdamage. -noviewonly for rawfb mode.

2005-04-10  Karl Runge <runge@karlrunge.com>
	* configure.ac: add mmap
	* x11vnc: -rawfb, -pipeinput, -xtrap, -flag, ...

2005-04-03  Karl Runge <runge@karlrunge.com>
	* configure.ac: add conditional libXTrap checking
	* x11vnc: use DEC-XTRAP on old X11R5 for grab control.
	  -shiftcmap n, -http, fix DAMAGE event leak.

2005-03-29  Karl Runge <runge@karlrunge.com>