@@ -1,3 +1,6 @@
+2005-05-15  Johannes E. Schindelin  <Johannes.Schindelin@gmx.de>
+	* acinclude.m4: fix compilation for systems without socklen_t
+
 2005-05-17  Karl Runge <runge@karlrunge.com>
 	* x11vnc: more scrolling, -scr_term, -wait_ui, -nowait_bog
 
